Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div id="loveu">
 					I LOVE YOU SO MUCH<br/>
-					<div class="signature">- RITVIK</div>
+					<div class="signature">- Vaibhav</div>
 				</div>
 			</div>
 		</div>
@@ -101,4 +101,5 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 </body>
+
 </html>
